--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"axios": "^1.7.9",
 		"cross-env": "^7.0.3",
 		"next": "15.1.0",
 		"no-cost-emi": "file:",
