--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 		"next": "15.1.0",
 		"no-cost-emi": "file:",
 		"react": "^19.0.0",
-		"react-dom": "^19.0.0"
+		"react-dom": "^19.0.0",
+		"react-to-print": "^3.0.2"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
