--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"axios": "^1.7.9",
 		"cross-env": "^7.0.3",
+		"html2canvas": "^1.4.1",
 		"jspdf": "^2.5.2",
 		"next": "15.1.0",
 		"no-cost-emi": "file:",
